# tanimoto-similarity

./: README.md  benchmark.ipynb  pyproject.toml  zinc20k.csv
src/tanimoto/: __init__.py  numba.py  numpy.py  rdkit.py  torch.py
tests/: _test_tanimoto.py  test_tanimoto.py
