[project]
name = "tanimoto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cython>=3.1.2",
    "numba>=0.61.2",
    "numpy>=2.2.6",
    "rdkit>=2025.3.3",
    "scipy>=1.15.3",
    "torch>=2.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]

[dependency-groups]
dev = [
    "ipython>=9.3.0",
    "ipywidgets>=8.1.7",
    "notebook>=7.4.3",
    "perfplot>=0.10.2",
    "pytest>=8.4.0",
    "seaborn>=0.13.2",
]
